Enum community_review_status {
  PUBLISHED
  HIDDEN
  REMOVED
  DELETED
}

Enum community_report_status {
  OPEN
  RESOLVED
  DISMISSED
}

Table community_visit_reviews [headercolor: #E15759] {
  id uuid [pk]
  member_id uuid [not null]
  place_id uuid [not null]
  text text [not null]
  status community_review_status [not null]
  created_at timestamptz [not null]
  deleted_at timestamptz

  Indexes {
    (created_at, id)
    (place_id, created_at, id)
    member_id
  }
}

Table community_review_likes [headercolor: #E15759] {
  review_id uuid [not null]
  member_id uuid [not null]
  created_at timestamptz [not null]

  Indexes {
    (review_id, member_id) [pk]
    member_id
  }
}

Table community_review_reports [headercolor: #E15759] {
  id uuid [pk]
  review_id uuid [not null]
  reporter_member_id uuid [not null]
  reason varchar [not null, note: 'SPAM, ABUSE, PERSONAL_DATA, COPYRIGHT, OTHER']
  detail text
  status community_report_status [not null]
  created_at timestamptz [not null]
  resolved_at timestamptz

  Indexes {
    (review_id, reporter_member_id) [unique]
    (status, created_at)
  }
}

Table community_review_moderation_actions [headercolor: #E15759] {
  id uuid [pk]
  review_id uuid [not null]
  actor_type varchar [not null, note: 'SYSTEM or OPERATOR; never a public member action']
  actor_ref varchar
  previous_status community_review_status [not null]
  next_status community_review_status [not null]
  reason varchar [not null]
  created_at timestamptz [not null]

  Indexes {
    (review_id, created_at)
  }
}

TableGroup community [color: #E15759, note: 'Short visit reviews, likes, member reports, and auditable moderation. Separate from historical Warmth mood/score model.'] {
  community_visit_reviews
  community_review_likes
  community_review_reports
  community_review_moderation_actions
}

Ref: community_review_likes.review_id > community_visit_reviews.id
Ref: community_review_reports.review_id > community_visit_reviews.id
Ref: community_review_moderation_actions.review_id > community_visit_reviews.id
